# VMI-Process-Real-Detail-Infor

./: README.md
client/: client.py  rename_VS_file.py  run_all_file.py  state_abnormal.py  state_client.py  teststate.py
client/getoffset/: Makefile  offset.c
host/: DBSnort.py  cal_migrate_code.py  calcul_knn.py  calcul_lof.py  calcul_sklearn.py  collect_data.py  get_host_info.py  get_modulelist.py  get_psinfo.py  inter_cpumem.py  kdisfile.py  lrdfile.py  read_snort_sql.py  response_detect.py  run_psinfo.py  samplebinlist  samplelist  socket_demo.py  start_net_detect.py  start_ps_detect.py  start_state_detect.py  stop_net_detect.py  stop_ps_detect.py  stop_state_detect.py  test.txt  testtime.py
host/config/: 4.4.57_offset.conf  4.4.57_syscall (another copy).conf  4.4.57_syscall.conf  ubuntu1604.conf  ubuntu1604_ACL.conf  ubuntu1604add.conf  ubuntu1604add_ACL.conf  ubuntu1604test.conf
host/process/: Makefile.am  myqueue.h  process-list.c  taskinfo.h
host/processinfo/: Makefile  Makefile.am  Makefile.in  acl.c  acl.h  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  global.h  main.c  myList.c  myList.h  mydbsql.h  mymodinfo.c  mymodinfo.h  myprint.c  myprint.h  mypsinfo.c  mypsinfo.h  myqueue.c  myqueue.h  mysyscall.c  mysyscall.h  tips  vminit.c  vminit.h  vmiprocessinfo
host/processinfo/config/: 4.4.57_offset.conf  4.4.57_syscall (now vm) (copy).conf  4.4.57_syscall.conf  ACL.config  ubuntu1604_ACL.conf
host/processinfo/temple/: ubuntu1604.exitps  ubuntu1604.modl
host/state/: DBHelper.py  EXProcesslist.py  StatMonitor.py  calcul_knn.py  calcul_lof.py  calkdis.py  callof.py  core  d_stat  ext_cputime.py  ext_module_list.py  ext_process_list.py  external_data.py  global_var.py  kdisfile.py  lrdfile.py  module  monitor.py  ps  server.py  sock_server.py  test.txt  testinit.py  vmaddr_config.py  warning_log.py  xentop
host/syscall/: Makefile.am  event-example.c  event-example.h  get_one_syscall.c
tool/collect_ps_info/: collect_data.py  vslist
tool/getAddrfromSysmap/: main.cpp  syscalladd.txt  syscallnum.txt  syscallres.txt
tool/spilt_data_by_list/: spiltdata.py
tool/uplaod_virustotal/: virustotal.py  vsupscan.py
(+8 files in other folders)
